--- a/resources/data/README.org
+++ b/resources/data/README.org
@@ -3,10 +3,11 @@
 
 
 #+CAPTION: Different types of biological data
-| Data type                        | Network | Nodes | Edges | Database | Script |
-|----------------------------------+---------+-------+-------+----------+--------|
-| Molecular interactions           |         |       |       |          |        |
-|----------------------------------+---------+-------+-------+----------+--------|
-| Functional associations          |         |       |       |          |        |
-|----------------------------------+---------+-------+-------+----------+--------|
-| Functional/structural similarity |         |       |       |          |        |
+| Data type                        | Network | Nodes | Edges                | Database                            | Script |
+|----------------------------------+---------+-------+----------------------+-------------------------------------+--------+
+| Molecular interactions           | PPI     | genes | physical interaction | [[https://thebiogrid.org/][BioGRID] |        |
+|                                  | GI      | genes | genetic interaction  | [[https://thebiogrid.org/][BioGRID] |        |
+|----------------------------------+---------+-------+----------------------+-------------------------------------+--------+
+| Functional associations          |         |       |                      |                                     |        |
+|----------------------------------+---------+-------+----------------------+-------------------------------------+--------+
+| Functional/structural similarity |         |       |                      |                                     |        |
