--- a/resources/data/README.org
+++ b/resources/data/README.org
@@ -1,14 +1,12 @@
 * Data
 
-
-
 #+CAPTION: Different types of biological data
-|----------------------------------+---------+-------+-------------------------------+-----------+--------|
-| Data type                        | Network | Nodes | Edges                         | Database  | Script |
-|----------------------------------+---------+-------+-------------------------------+-----------+--------|
-| Molecular interactions           | PPI     | genes | physical interaction          | [[https://thebiogrid.org/][BioGRID]]   |        |
-|----------------------------------+---------+-------+-------------------------------+-----------+--------|
-| Functional associations          | GI      | genes | genetic interaction           | [[https://thebiogrid.org/][BioGRID]]   |        |
-|----------------------------------+---------+-------+-------------------------------+-----------+--------|
-| Functional/structural similarity | COEX    | genes | expression profile similarity | [[https://coxpresdb.jp/download/][COXPRESdb]] |        |
-|----------------------------------+---------+-------+-------------------------------+-----------+--------|
+|----------------------------------+---------+-------+-------------------------------+-----------+--------------------------------------|
+| Data type                        | Network | Nodes | Edges                         | Database  | Script                               |
+|----------------------------------+---------+-------+-------------------------------+-----------+--------------------------------------|
+| Molecular interactions           | PPI     | genes | physical interaction          | [[https://thebiogrid.org/][BioGRID]]   | [[../scripts/biogrid.py][biogrid.py] |
+|----------------------------------+---------+-------+-------------------------------+-----------+--------------------------------------|
+| Functional associations          | GI      | genes | genetic interaction           | [[https://thebiogrid.org/][BioGRID]]   |                                      |
+|----------------------------------+---------+-------+-------------------------------+-----------+--------------------------------------|
+| Functional/structural similarity | COEX    | genes | expression profile similarity | [[https://coxpresdb.jp/download/][COXPRESdb]] |                                      |
+|----------------------------------+---------+-------+-------------------------------+-----------+--------------------------------------|
