--- a/resources/data/README.org
+++ b/resources/data/README.org
@@ -8,7 +8,7 @@ scripts are not guaranteed to be bug-free (yet), so any bugs are your responsibi
 
 To anyone adding scripts, please update the table below and, in the
 scripts, add a description of what the script does, the version number
-of the database, it has been tested on and your name (so we know who to
+of the database it has been tested on and your name (so we know who to
 contact if something is not clear).
 
 #+CAPTION: Different types of biological data
