--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -1,8 +1,8 @@
 * Non-negative Matrix Tri-Factorisation
 
 #+OPTIONS: \n:t
-|--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
-| Title                                                              | Relevance                                | Author                             | Group | DOI                           |
-|--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
-| Learning the parts of objects by non-negative matrix factorization | introduces multiplicative update rules, relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
-|--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
+|--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+-------------------------------|
+| Title                                                              | Relevance                                                            | Author                             | Group | DOI                           |
+|--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+-------------------------------|
+| Learning the parts of objects by non-negative matrix factorization | 1. introduces multiplicative update rules 2. relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
+|--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+-------------------------------|
