added coexdb to data readme

--- a/resources/data/README.org
+++ b/resources/data/README.org
@@ -19,5 +19,5 @@ contact if something is not clear).
 |----------------------------------+---------+-------+-------------------------------+-----------+------------|
 | Functional associations          | GI      | genes | genetic interaction           | [[https://thebiogrid.org/][BioGRID]]   | [[scripts/biogrid.py][biogrid.py]] |
 |----------------------------------+---------+-------+-------------------------------+-----------+------------|
-| Functional/structural similarity | COEX    | genes | expression profile similarity | [[https://coxpresdb.jp/download/][COXPRESdb]] | NA         |
+| Functional/structural similarity | COEX    | genes | expression profile similarity | [[https://coxpresdb.jp/download/][COXPRESdb]] | [[scripts/coexdb.py][coexdb.py]] |
 |----------------------------------+---------+-------+-------------------------------+-----------+------------|
