updated readme research skills

--- a/resources/research_skills/README.org
+++ b/resources/research_skills/README.org
@@ -1,4 +1,4 @@
-* Communication Skills
+* Research Skills
 
 problem -> hypothetical underlying cause -> suggested fix (i.e. design methodology) -> evaluate (has problem been fixed).
 
