--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -1,8 +1,9 @@
 * Non-negative Matrix Tri-Factorisation
 
+#+OPTIONS: \n:t
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
 | Title                                                              | Relevance                                | Author                             | Group | DOI                           |
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
-| Learning the parts of objects by non-negative matrix factorization | - introduces multiplicative update rules | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
-|                                                                    | - relates NMF, PCA and VQ                |                                    |       |                               |
+| Learning the parts of objects by non-negative matrix factorization | - introduces multiplicative update rules \n - relates NMF, PCA and VQ  | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
+|                                                                    |               |                                    |       |                               |
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
