--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -4,6 +4,5 @@
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
 | Title                                                              | Relevance                                | Author                             | Group | DOI                           |
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
-| Learning the parts of objects by non-negative matrix factorization | - introduces multiplicative update rules \n - relates NMF, PCA and VQ  | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
-|                                                                    |               |                                    |       |                               |
+| Learning the parts of objects by non-negative matrix factorization | introduces multiplicative update rules, relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung |       | [[10.1038/44565][https://doi.org/10.1038/44565]] |
 |--------------------------------------------------------------------+------------------------------------------+------------------------------------+-------+-------------------------------|
