--- a/resources/machine_learning/NMTF/README.org
+++ b/resources/machine_learning/NMTF/README.org
@@ -4,5 +4,5 @@
 |--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+---------------|
 | Title                                                              | Relevance                                                            | Author                             | Group | DOI           |
 |--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+---------------|
-| Learning the parts of objects by non-negative matrix factorization | 1. introduces multiplicative update rules 2. relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung |       | [[ https://doi.org/10.1038/44565][10.1038/44565]] |
+| Learning the parts of objects by non-negative matrix factorization | 1. introduces multiplicative update rules 2. relates NMF, PCA and VQ | Daniel D. Lee & H. Sebastian Seung |       | [[http://doi.org/10.1038/44565][10.1038/44565]]|
 |--------------------------------------------------------------------+----------------------------------------------------------------------+------------------------------------+-------+---------------|
