--- a/resources/research_skills/README.org
+++ b/resources/research_skills/README.org
@@ -1,5 +1,10 @@
 * Research Skills
 
+TODO
+- add list of key researchers to follow
+- add list of key journals
+- add list of key conferences
+
 problem -> hypothetical underlying cause -> suggested fix (i.e. design methodology) -> evaluate (has problem been fixed).
 
 observation -> infer, i.e. what does it mean -> is further validation needed -> design experiment -> evaluate
